--- a/src/wallet.yaml
+++ b/src/wallet.yaml
@@ -509,11 +509,14 @@ paths:
             schema:
               type: object
               required:
-                - offer
+                - trade_id
               properties:
-                offer:
+                trade_id:
                   type: string
                   format: hex
+                file_contents:
+                  type: boolean
+                  description: Indicator as to whether to return the offer contents
       responses:
         200:
           description: OK
