correct strcutre of sent_to

--- a/src/schemas/trade_record.yaml
+++ b/src/schemas/trade_record.yaml
@@ -37,9 +37,11 @@ trade_record:
         included it in the mempool, and what the error message (if any) was.
         List[Tuple[str, uint8, Optional[str]]]
       items:
-        type: object
-        anyOf:
-          - type: string
-          - type: integer
-            format: uint8
-          - type: string
+        type: array
+        items:
+          type: object
+          anyOf:
+            - type: string
+            - type: integer
+              format: uint8
+            - type: string
