--- a/.github/workflows/linter.yaml
+++ b/.github/workflows/linter.yaml
@@ -3,10 +3,10 @@ name: Run OpenAPI linter
 on:  
   push:
     branches:
-      - master
+      - main
   pull_request:
     branches:
-      - master
+      - main
 
 jobs:
   build:
@@ -16,4 +16,4 @@ jobs:
       - uses: actions/checkout@v3
       - uses: stoplightio/spectral-action@v0.8.1
         with:
-          file_glob: 'openapi.yaml'
+          file_glob: 'src/*.yaml'
